# LabSound

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGES.md  CMakeLists.txt  CNAME  COPYING  LICENSE  LabSound.sln  LabSound.sublime-project  LabSoundIncludes.h  README.md  Releases.md  appveyor.yml  binding.gyp  example.js  index.js  main.cpp  package.json  premake4.lua  qmake.pro  readme-sublime.txt  serialization_proposal.txt
.github/workflows/: cmake-android.yml  cmake-ios.yml  cmake-macos.yml  cmake-ubuntu.yml  cmake-windows.yml  cmake.yml
DalekVoiceApp.xcodeproj/: project.pbxproj
LabSound.xcworkspace/xcshareddata/: LabSound.xccheckout
LabSound/core/: AnalyserNode.h  AudioBasicInspectorNode.h  AudioBasicProcessorNode.h  AudioBuffer.h  AudioBufferSourceNode.h  AudioDestinationNode.h  AudioListener.h  AudioNode.h  AudioNodeInput.h  AudioNodeOutput.h  AudioParam.h  AudioParamTimeline.h  AudioProcessor.h  AudioScheduledSourceNode.h  AudioSourceNode.h  AudioSummingJunction.h  BiquadProcessor.h  ChannelSplitterNode.h  ConcurrentQueue.h  ConvolverNode.h  DefaultAudioDestinationNode.h  DelayDSPKernel.h  DelayNode.h  MediaStream.h  MediaStreamAudioSourceNode.h  OfflineAudioDestinationNode.h  OscillatorNode.h  PannerNode.h  WaveShaperNode.h  WaveTable.h  WindowFunctions.h
LabSound/extended/: ADSRNode.h  Assertions.h  AudioContextLock.h  LabSoundConfig.h  NoiseNode.h  PeakCompNode.h  RealtimeAnalyser.h  RecorderNode.h  STKNode.h  SampledInstrumentNode.h  SfxrNode.h  SoundBuffer.h  SupersawNode.h
LabSoundDemo.xcodeproj/: project.pbxproj
LabSpatialLocalization/LabSpatialLocalization.xcodeproj/: project.pbxproj
LiveEchoApp.xcodeproj/: project.pbxproj
PureDataApp.xcodeproj/: project.pbxproj
PureDataApp/PureDataApp/: main.cpp
ReverbApp.xcodeproj/: project.pbxproj
RhythmApp.xcodeproj/: project.pbxproj
RhythmFilteredApp.xcodeproj/: project.pbxproj
SampleSpatializationApp.xcodeproj/: project.pbxproj
SfxrApp/SfxrApp.xcodeproj/: project.pbxproj
ToneAndSampleApp.xcodeproj/: project.pbxproj
assets/pd/: fire_all.pd  firegen.pd
cmake/: CMakeLists.txt  LabSound.cmake  LabSoundConfig.cmake.in  common.cmake  examples.cmake  ios-toolchain.cmake  libnyquist.cmake  libsamplerate.cmake  miniaudio.cmake
cmake/defaults/: CXXDefaults.cmake  CXXhelpers.cmake  Utilities.cmake  (+3 more)
docs/: python-tdd.md  webaudio-labsound-comparison.md
examples/: 001_oscillator.js
include/: Assertions.h  LabSound.h  LabSoundConfig.h  LabSoundIncludes.h  Logging.h  config.h
labsound/: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build-linux.sh  build-macos.sh  build-ml.sh  build-windows.cmd  toolchain
labsoundpy/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  setup.py  todo-pypi.md
labsoundpy/docs/: README.md
labsoundpy/examples/: README.md  custom_processing.py  distortion_effect.py  numpy_processing.py  simple_oscillator.py  spatial_audio.py
labsoundpy/labsound/: __init__.py  _version.py  audio_context.py  audio_node.py  audio_param.py
labsoundpy/labsound/nodes/: __init__.py  analyzer_node.py  buffer_source_node.py  channel_merger_node.py  channel_splitter_node.py  constant_source_node.py  convolver_node.py  delay_node.py  destination_node.py  dynamics_compressor_node.py  function_node.py  panner_node.py  stereo_panner_node.py  wave_shaper_node.py
labsoundpy/src/: audio_context.cpp  audio_context.h  audio_node.cpp  audio_node.h  audio_param.cpp  audio_param.h  core.cpp
labsoundpy/src/nodes/: analyzer_node.cpp  analyzer_node.h  biquad_filter_node.cpp  biquad_filter_node.h  buffer_source_node.cpp  buffer_source_node.h  channel_merger_node.cpp  channel_merger_node.h  channel_splitter_node.cpp  channel_splitter_node.h  constant_source_node.cpp  constant_source_node.h  convolver_node.cpp  convolver_node.h  delay_node.cpp  delay_node.h  destination_node.cpp  destination_node.h  dynamics_compressor_node.cpp  dynamics_compressor_node.h  function_node.cpp  function_node.h  gain_node.cpp  gain_node.h  oscillator_node.cpp  oscillator_node.h  panner_node.cpp  panner_node.h  stereo_panner_node.cpp  stereo_panner_node.h  wave_shaper_node.cpp  wave_shaper_node.h
labsoundpy/tests/: README.md  test_basic.py
qmake/: examples.pro  labsound.pro  libnyquist.pro
sampleData/: crackling.pd  lapping.pd  livetest.raw  test.raw  toneAndSample.raw  wind4.pd
src/: LabSoundMain.cpp  config.h  premake4.lua
unit_tests/: main.cpp
win/: LabSound.sln  LabSound.vcxproj  LabSound.vcxproj.filters
win.vs2013/: LabSound.sln  LabSound.vcxproj
win.vs2015/: LabSound.sln  LabSound.vcxproj  LabSound.vcxproj.filters
win.vs2017/: LabSound.sln  LabSound.vcxproj  LabSound.vcxproj.filters
(+1162 files in other folders)
